--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <script src="javascript.js" defer></script>
 </head>
 <body>
-  <button id="button">Change Grid Size</button>
+  <div>
+    <button class="size-button">Change Grid Size</button>
+    <button class="reset-button">Reset Grid</button>
+  </div>
   <div id="container"></div>
 </body>
 </html>
