Remove reset button - Felt it was redundant once the clearGrid function   was implemented

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <div>
-    <button class="size-button">Change Grid Size</button>
-    <button class="reset-button">Reset Grid</button>
+    <button class="size-button">Select Grid Size</button>
   </div>
   <div id="container"></div>
 </body>
